# kokoclone

./: .dockerignore  Dockerfile  Dockerfile.gpu  README.md  cog.yaml  predict.py  pyproject.toml  requirements-cog.txt
.cog/: openapi_schema.json
.github/workflows/: docker-publish-gpu.yml  docker-publish.yml
