[project]
name = "kokoclone"
version = "0.1.0"
description = "KokoClone is a fast, real-time compatible multilingual voice cloning system built on top of Kokoro-ONNX, one of the fastest open-source neural TTS engines available today."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.8.0",
    "huggingface-hub>=1.5.0",
    "kanade-tokenizer",
    "kokoro-onnx[gpu]>=0.5.0",
    "misaki[en,ja,zh]>=0.9.4",
    "ninja>=1.13.0",
    "soundfile>=0.13.1",
    "torch>=2.6,<2.7",
    "torchaudio>=2.6,<2.7",
]

[tool.uv.sources]
kanade-tokenizer = { git = "https://github.com/frothywater/kanade-tokenizer" }
torch = { index = "pytorch-cu12" }
torchaudio = { index = "pytorch-cu12" }

[[tool.uv.index]]
name = "pytorch-cu12"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv]
no-build-isolation-package = ["flash-attn"]
